[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=61.2",
    "setuptools_scm",
    "wheel",
]

[project]
authors = [
    {name = "Mikhail Mikhasenko"},
    {name = "Remco de Boer"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "IPython",
    "PyYAML",
    "ampform >=0.15.11", # @unevaluated decorator, cached module, single-sqrt phsp factor
    "ampform-dpd ~=0.3.0", # cached module, DefinedExpression
    "attrs >=20.1.0",
    "cairosvg",
    "matplotlib",
    "numpy",
    "scour",
    "sympy >=1.10",
    "tensorwaves[jax] >=0.4.5",
]
description = "Symbolic expressions that describe an aligned polarimeter vector field"
dynamic = ["version"]
license = {file = "LICENSE"}
name = "polarimetry-lc2pkpi"
requires-python = ">=3.10"

[project.readme]
content-type = "text/markdown"
file = "README.md"

[dependency-groups]
dev = [
    "nbmake",
    "ruff",
    "sphinx-autobuild",
    {include-group = "doc"},
    {include-group = "jupyter"},
    {include-group = "style"},
    {include-group = "test"},
]
doc = [
    "myst-nb",
    "sphinx-api-relink",
    "sphinx-book-theme",
    "sphinx-codeautolink[ipython]",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-pybtex-etal-style",
    "sphinx-reredirects",
    "sphinx-togglebutton",
    "sphinxcontrib-bibtex >=2.2",
    "sphinxcontrib-svg2pdfconverter",
]
jupyter = [
    "jupyter-ruff",
    "jupyterlab",
    "jupyterlab-execute-time",
    "jupyterlab-git",
    "jupyterlab-lsp",
    "jupyterlab-myst",
    "jupyterlab-quickopen",
    "python-lsp-ruff",
    "python-lsp-server",
    {include-group = "notebooks"},
]
notebooks = [
    "cloudpickle",
    "deepdiff",
    "ipympl",
    "ipywidgets",
    "kaleido",
    "kaleido~=0.1,!=0.2.1.post1",
    "matplotlib-inline",
    "pandas",
    "plotly~=5.0", # https://github.com/executablebooks/MyST-NB/issues/667
    "psutil",
    "scipy",
    "svgutils",
    "tqdm",
    "unicodeitplus",
    "uproot",
]
style = [
    "ty",
    {include-group = "types"},
]
test = ["pytest"]
types = [
    "nbformat",
    "pybtex-docutils",
    "pytest",
    "sphinx-api-relink",
    "types-PyYAML",
    "types-docutils",
    "types-requests",
]

[tool.setuptools]
include-package-data = false
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"polarimetry.lhcb" = [
    "model-definitions.yaml",
    "particle-definitions.yaml",
]

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]

[tool.setuptools_scm]
write_to = "src/polarimetry/version.py"

[tool.pytest]
addopts = [
    "--color=yes",
    "--doctest-continue-on-failure",
    "--doctest-modules",
    "--durations=3",
    "--ignore-glob=.virtual_documents",
    "--ignore=docs/appendix/widget.ipynb",
    "--ignore=docs/conf.py",
    "--import-mode=importlib",
    "-m not slow",
]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore:The collections attribute was deprecated.*:matplotlib._api.deprecation.MatplotlibDeprecationWarning",
    "ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning",
]
markers = ["slow: marks tests as slow (select with '-m slow')"]
minversion = "9.0"
norecursedirs = [
    ".ipynb_checkpoints",
    "_build",
    "docs/extensions",
]
testpaths = [
    "src",
    "tests",
]

[tool.ruff]
extend-exclude = ["typings"]
extend-include = ["*.ipynb"]
preview = true
show-fixes = true
src = [
    "src",
    "tests",
]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "ANN",
    "COM812",
    "CPY001",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D213",
    "D407",
    "D416",
    "DOC",
    "E501",
    "FBT",
    "FURB101",
    "FURB103",
    "FURB140",
    "G004",
    "ISC001",
    "ISC003",
    "PLC2401",
    "PLC2403",
    "PLR0913",
    "PLR2004",
    "PLW1514",
    "PLW2901",
    "PT001",
    "PTH",
    "RUF001",
    "RUF067",
    "S403",
    "SIM108",
]
select = ["ALL"]
task-tags = ["cspell"]

[tool.ruff.lint.flake8-builtins]
builtins-allowed-modules = ["io"]
builtins-ignorelist = ["display"]

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["polarimetry"]
known-third-party = ["sympy"]
split-on-trailing-comma = false

[tool.ruff.lint.pep8-naming]
ignore-names = [
    "*_I",
    "*_I_*",
    "A",
    "Dx",
    "I0",
    "I_*",
    "L",
    "P[xyz]",
    "R",
    "S",
    "U_*",
    "[RH]_*",
    "abs_Δα",
    "l_*",
    "mK",
    "mKπ",
    "max_L",
    "mΣ",
    "s_A",
    "Γ*",
    "λ*",
]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "B018",
    "C408",
    "C90",
    "D",
    "E303",
    "E402",
    "E703",
    "E741",
    "N8",
    "PLC2701",
    "PLR09",
    "PLW0602",
    "PLW0603",
    "S101",
    "S102",
    "S301",
    "S307",
    "S310",
    "T20",
    "TC00",
]
"**/benchmark.ipynb" = ["F821"]
"**/extensions/*.py" = ["ARG001"]
"**/polarimetry.ipynb" = ["SLF001"]
"**/uncertainties.ipynb" = ["ARG001"]
"**/widget.ipynb" = ["ARG001"]
"docs/*" = [
    "E402",
    "INP001",
    "S101",
    "S113",
    "S310",
]
"docs/conf.py" = [
    "A00",
    "D100",
    "DTZ005",
    "S404",
    "S60",
    "T201",
]
"src/polarimetry/io.py" = ["S301"] # pickle
"src/polarimetry/plot.py" = ["S404", "S60"] # subprocess
"tests/*" = [
    "C408",
    "D",
    "INP001",
    "N806",
    "PLC2701",
    "PLR6301",
    "S101",
    "SLF001",
    "T20",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.tomlsort]
all = false
ignore_case = true
in_place = true
sort_first = [
    "build-system",
    "project",
    "tool.setuptools",
    "tool.setuptools_scm",
]
spaces_indent_inline_array = 4
trailing_comma_inline_array = true

[[tool.ty.overrides]]
include = ["docs/amplitude-model.ipynb"]
rules.invalid-argument-type = "ignore"
rules.unresolved-attribute = "ignore"
rules.unsupported-operator = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/alignment.ipynb"]
rules.possibly-unresolved-reference = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/benchmark.ipynb"]
rules.invalid-argument-type = "ignore"
rules.unresolved-reference = "ignore"

[[tool.ty.overrides]]
include = ["docs/cross-check.ipynb"]
rules.call-non-callable = "ignore"
rules.invalid-argument-type = "ignore"
rules.possibly-missing-attribute = "ignore"
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/dynamics.ipynb"]
rules.invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/ls-model.ipynb"]
rules.invalid-argument-type = "ignore"
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/model-serialization.ipynb"]
rules.invalid-argument-type = "ignore"
rules.unresolved-attribute = "ignore"
rules.unresolved-reference = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/pc-pv-currents.ipynb"]
rules.invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/serialization.ipynb"]
rules.invalid-argument-type = "ignore"

[[tool.ty.overrides]]
include = ["docs/index.ipynb"]
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/appendix/widget.ipynb"]
rules.no-matching-overload = "ignore"
rules.possibly-unresolved-reference = "ignore"
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/intensity.ipynb"]
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/uncertainties.ipynb"]
rules.invalid-argument-type = "ignore"
rules.invalid-return-type = "ignore"
rules.possibly-unresolved-reference = "ignore"
rules.unresolved-attribute = "ignore"

[[tool.ty.overrides]]
include = ["docs/resonance-polarimetry.ipynb"]
rules.invalid-return-type = "ignore"

[[tool.ty.overrides]]
include = ["docs/zz.polarization-fit.ipynb"]
rules.invalid-argument-type = "ignore"
rules.invalid-assignment = "ignore"
rules.invalid-return-type = "ignore"

[tool.ty.rules]
division-by-zero = "warn"
possibly-missing-import = "warn"
possibly-unresolved-reference = "warn"

[tool.uv.sources]
ampform = {git = "https://github.com/ComPWA/ampform", rev = "fc1d4e2920954738bb6620905f0de0a73a5a93cd"}
ampform-dpd = {git = "https://github.com/ComPWA/ampform-dpd", rev = "0bf986807a349b0e656ee43f4f2ec63627cfbf2d"}
qrules = {git = "https://github.com/ComPWA/qrules", rev = "33be556be51fff52869034327bcf6157eb6cf726"}
sphinx-api-relink = {git = "https://github.com/ComPWA/sphinx-api-relink", rev = "5e18cb0981eb31680926bdb6511078f4308f38e0"}
tensorwaves = {git = "https://github.com/ComPWA/tensorwaves", rev = "916cf9202569ad5503eb1fb04e129ae0a6d8120d"}
