[metadata]
name = polarimetry
description = Symbolic expressions that describe an aligned polarimeter vector field
author = Mikhail Mikhasenko, Remco de Boer
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3 or later

[options]
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    ampform >=0.14.1  # Kibble and Kallen functions
    attrs >=20.1.0  # on_setattr and https://www.attrs.org/en/stable/api.html#next-gen
    IPython
    numpy
    sympy >=1.10  # module sympy.printing.numpy and array expressions with shape kwarg
    typing-extensions; python_version <"3.8.0"
    PyYAML
packages = find:
package_dir =
    =src

[options.extras_require]
doc =
    cairosvg
    ipywidgets
    matplotlib
    matplotlib-inline !=0.1.5  # problem with plt.ioff()
    myst-nb >=0.14  # nb_render_markdown_format for Markdown tables
    pandas
    psutil
    scipy
    sphinx-book-theme
    sphinx-codeautolink[ipython]
    sphinx-copybutton
    sphinx-panels
    sphinx-togglebutton
    svgutils
    tensorwaves[jax] >=0.4.5  # lambdify sympy.Indexed
    tqdm
jupyter =
    %(doc)s
    aquirdturtle-collapsible-headings
    jupyterlab >=3.0
    jupyterlab-code-formatter
    jupyterlab-myst
test =
    nbmake <=1.3.0  # https://github.com/ComPWA/polarimetry/runs/8170542428?check_suite_focus=true#step:3:69
    pytest >=6.0  # pyproject.toml
    pytest-xdist
format =
    black
    isort
sty =
    %(format)s
    pre-commit >=1.4.0
dev =
    %(doc)s
    %(jupyter)s
    %(sty)s
    %(test)s
    sphinx-autobuild
    tox >=1.9  # for skip_install, use_develop

[options.packages.find]
where = src

[options.package_data]
polarimetry.lhcb =
    model-definitions.yaml
    particle-definitions.yaml
